# marketing-ai-agent

./: .env.example  .gitignore  README.md  chart_viewer.py  pyproject.toml  test_new_visualization.py  view_charts.py
db/: migration-social-media-campaigns.sql  run_migration.py
frontend/: chat_local.py  voice_chat.py
frontend/output/charts/: top_10_customers_by_spending_20250813_051240.html  top_10_customers_by_spending_20250813_051240.json  top_5_customers_by_spending_20251107_173623.html  top_5_customers_by_spending_20251107_173623.json
src/neo/: graph.py  prompts.py
src/neo/my_mcp/: config.py  mcp_config.json
src/neo/my_mcp/servers/: marketing_server.py
src/neo/visualization/: __init__.py  core.py  display.py  utils.py
src/neo/voice/: __init__.py  voice_utils.py
